syntax = "proto3";

package auth;

option go_package = "sut-auth-go/proto/auth";

import "auth/auth_enum.proto";

message UserRegisterRequest {
    string id = 1;
    string username = 2;
    string name = 3;
    string password = 4;
    Role role = 5;
    string adminId = 6;
}

message UserRegisterResponse {
    int64 status = 1;
    string error = 2;
}

message AdminRegisterResponse {
    int64 status = 1;
    string error = 2;
}

message AdminRegisterRequest {
    string id = 1;
    string username = 2;
    string name = 3;
    string password = 4;
    Role role = 5;
    string adminKey = 6; 
}

message AuthenticateRequest {
    string token = 1;
}

message UserInfo {
    string id = 1;
    string username = 2;
    string name = 3;
    Role role = 4;
    string adminId = 5;
}

message AuthenticateResponse {
    int64 status = 1;
    string error = 2;
    UserInfo userinfo = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
    string refreshtoken = 4;
    UserInfo userInfo = 5;
}

message GetUserByRoleRequest {
    string role = 1;
}

message UserAdminInfo {
    string id = 1;
    string username = 2;
    string name = 3;
    string role = 4;
}

message GetUserByRoleResponse {
    int64 status = 1;
    string error = 2;
    repeated UserAdminInfo UserAdminInfo = 3;
}

message DeleteTokenRequest {
    string token = 1;
}

message DeleteTokenResponse {
    int64 status = 1;
    string error = 2;
}

message GenerateNewTokenRequest {
    string refreshToken = 1;
}

message GenerateNewTokenResponse {
    int64 status = 1;
    string error = 2;
    string newToken = 3;
}
