syntax = "proto3";

package auth;

option go_package = "sut-auth-go/proto/auth";

import "auth/auth.proto";

service AuthService {
    rpc GetUserByRole(GetUserByRoleRequest) returns (GetUserByRoleResponse) {} 
    rpc RegisterUser(UserRegisterRequest) returns (UserRegisterResponse) {}
    rpc RegisterAdmin(AdminRegisterRequest) returns (AdminRegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
    rpc DeleteToken(DeleteTokenRequest) returns (DeleteTokenResponse) {}
    rpc GenerateNewToken(GenerateNewTokenRequest) returns (GenerateNewTokenResponse) {}
}